--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cheerio": "^1.0.0-rc.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
+    "babel-jest": "^27.2.0",
     "jest": "^27.2.0"
   }
 }
