--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "html-to-json",
+  "name": "@resohead/html-to-json",
+
   "version": "0.1.0",
   "description": "Convert HTML to JSON",
   "main": "src/index.js",
